--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
       <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate portfolio">
         <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/06.jpg" alt="">
           <div class="portfolio-info"> <a class="preview" href="images/Portfolio/06.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
-            <h6>ITEM-2</h6>
+            <h6>ITEM-6</h6>
             <p>14/20/2021</p>
           </div>
         </div>
@@ -429,7 +429,7 @@
       <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item creative">
         <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/07.jpg" alt="">
           <div class="portfolio-info"> <a class="preview" href="images/Portfolio/07.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
-            <h6>ITEM-3</h6>
+            <h6>ITEM-7</h6>
             <p>Lorem Ipsum</p>
           </div>
         </div>
@@ -438,7 +438,7 @@
       <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
         <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/08.jpg" alt="">
           <div class="portfolio-info"> <a class="preview" href="images/Portfolio/08.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
-            <h6>ITEM-4</h6>
+            <h6>ITEM-8</h6>
             <p>Lorem Ipsum</p>
           </div>
         </div>
@@ -447,8 +447,53 @@
       <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
         <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/09.jpg" alt="">
           <div class="portfolio-info"> <a class="preview" href="images/Portfolio/09.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
-            <h6>ITEM-6</h6>
+            <h6>ITEM-9</h6>
             <p>Lorem Ipsum</p>
+          </div>
+        </div>
+        </div>
+        <!--/.portfolio-item-->
+      <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/09.jpg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/10.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-10</h6>
+            <p>28/11/2021</p>
+          </div>
+        </div>
+        </div>
+        <!--/.portfolio-item-->
+      <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/09.jpg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/11.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-11</h6>
+            <p>28/11/2021</p>
+          </div>
+        </div>
+        </div>
+        <!--/.portfolio-item-->
+      <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/09.jpg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/12.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-12</h6>
+            <p>28/11/2021</p>
+          </div>
+        </div>
+        </div>
+        <!--/.portfolio-item-->
+      <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/09.jpg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/13.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-13</h6>
+            <p>28/11/2021</p>
+          </div>
+        </div>
+        </div>
+        <!--/.portfolio-item-->
+      <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/09.jpg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/14.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-14</h6>
+            <p>28/11/2021</p>
           </div>
         </div>
         </div>
