--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
           <div class="team-img"> <img src="images/Team/06.jpg" class="img-responsive" alt="">
             <div class="team-desc">
               <h5>md nobab sojib</h5>
-              <p>Roll 0</p>
+              <p>Roll 030</p>
               <ul class="team-social-icon">
                 <li><a href="https://www.facebook.com/mdsajib.sajib.7777019" target="blank" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
                 <li><a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fab fa-twitter"></i></a></li>
@@ -820,12 +820,12 @@
     </div>
     <div class="col-md-3 col-sm-6 col-xs-12 team-main-sec wow slideInUp" data-wow-duration="1s" data-wow-delay=".1s">
       <div class="team-sec">
-        <div class="team-img"> <img src="images/Team/00.png" class="img-responsive" alt="">
+        <div class="team-img"> <img src="images/Team/13.png" class="img-responsive" alt="">
           <div class="team-desc">
-            <h5>user</h5>
-            <p>Roll xxx</p>
+            <h5>md. maruf</h5>
+            <p>Roll 051</p>
             <ul class="team-social-icon">
-              <li><a href="#" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
+              <li><a href="https://www.facebook.com/profile.php?id=100040357174380" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
               <li><a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fab fa-twitter"></i></a></li>
               <li><a href="#" data-toggle="tooltip" data-placement="top" title="Pinterest"><i class="fab fa-pinterest-p"></i></a></li>
               <li><a href="#" data-toggle="tooltip" data-placement="top" title="Instagram"><i class="fab fa-instagram"></i></a></li>
