--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@
     </div>
     <div class="col-md-3 col-sm-6 col-xs-12 team-main-sec wow slideInUp" data-wow-duration="1s" data-wow-delay=".1s">
       <div class="team-sec">
-        <div class="team-img"> <img src="images/Team/13.png" class="img-responsive" alt="">
+        <div class="team-img"> <img src="images/Team/13.jpg" class="img-responsive" alt="">
           <div class="team-desc">
             <h5>md. maruf</h5>
             <p>Roll 051</p>
