--- a/index.html
+++ b/index.html
@@ -837,12 +837,12 @@
     </div>
     <div class="col-md-3 col-sm-6 col-xs-12 team-main-sec wow slideInUp" data-wow-duration="1s" data-wow-delay=".2s">
       <div class="team-sec">
-        <div class="team-img"> <img src="images/Team/00.png" class="img-responsive" alt="">
+        <div class="team-img"> <img src="images/Team/14.jpg" class="img-responsive" alt="">
           <div class="team-desc">
-            <h5>user</h5>
-            <p>Roll xxx</p>
+            <h5>Md Oliullah Santo</h5>
+            <p>Roll 031</p>
             <ul class="team-social-icon">
-              <li><a href="#" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
+              <li><a href="https://www.facebook.com/mdoliullah.santo" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
               <li><a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fab fa-twitter"></i></a></li>
               <li><a href="#" data-toggle="tooltip" data-placement="top" title="Pinterest"><i class="fab fa-pinterest-p"></i></a></li>
               <li><a href="#" data-toggle="tooltip" data-placement="top" title="Instagram"><i class="fab fa-instagram"></i></a></li>
