--- a/index.html
+++ b/index.html
@@ -497,6 +497,42 @@
           </div>
         </div>
         </div>
+         <!--/.portfolio-item-->
+      <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/15.jpg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/15.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-15</h6>
+            <p>06/12/2021</p>
+          </div>
+        </div>
+        </div>
+         <!--/.portfolio-item-->
+      <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/16.jpg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/16.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-16</h6>
+            <p>06/12/2021</p>
+          </div>
+        </div>
+        </div>
+         <!--/.portfolio-item-->
+      <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/17.jpg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/17.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-17</h6>
+            <p>06/12/2021</p>
+          </div>
+        </div>
+        </div>
+         <!--/.portfolio-item-->
+      <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/18.jpg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/18.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-18</h6>
+            <p>06/12/2021</p>
+          </div>
+        </div>
+        </div>
       <!--/.portfolio-item-->
     </div>
   </div>
