--- a/index.html
+++ b/index.html
@@ -533,6 +533,24 @@
           </div>
         </div>
         </div>
+        <!--/.portfolio-item-->
+      <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/19.jpg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/19.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-19</h6>
+            <p>08/12/2021</p>
+          </div>
+        </div>
+        </div>
+        <!--/.portfolio-item-->
+      <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/20.jpg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/20.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-20</h6>
+            <p>08/12/2021</p>
+          </div>
+        </div>
+        </div>
       <!--/.portfolio-item-->
     </div>
   </div>
