--- a/index.html
+++ b/index.html
@@ -551,6 +551,60 @@
           </div>
         </div>
         </div>
+        <!--/.portfolio-item-->
+      <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/20.jpg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/21.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-20</h6>
+            <p>08/01/2022</p>
+          </div>
+        </div>
+        </div>
+        <!--/.portfolio-item-->
+      <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/20.jpg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/22.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-20</h6>
+            <p>08/01/2022</p>
+          </div>
+        </div>
+        </div>
+        <!--/.portfolio-item-->
+      <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/20.jpg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/23.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-20</h6>
+            <p>08/01/2022</p>
+          </div>
+        </div>
+        </div>
+        <!--/.portfolio-item-->
+      <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/20.jpg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/24.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-20</h6>
+            <p>09/01/2022</p>
+          </div>
+        </div>
+        </div>
+        <!--/.portfolio-item-->
+      <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/20.jpg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/25.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-20</h6>
+            <p>09/01/2022</p>
+          </div>
+        </div>
+        </div>
+        <!--/.portfolio-item-->
+      <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/20.jpg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/26.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-20</h6>
+            <p>09/01/2022</p>
+          </div>
+        </div>
+        </div>
       <!--/.portfolio-item-->
     </div>
   </div>
