--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
       <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
         <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/21.jpg" alt="">
           <div class="portfolio-info"> <a class="preview" href="images/Portfolio/21.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
-            <h6>ITEM-20</h6>
+            <h6>ITEM-21</h6>
             <p>08/01/2022</p>
           </div>
         </div>
@@ -564,7 +564,7 @@
       <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
         <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/22.jpg" alt="">
           <div class="portfolio-info"> <a class="preview" href="images/Portfolio/22.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
-            <h6>ITEM-20</h6>
+            <h6>ITEM-22</h6>
             <p>08/01/2022</p>
           </div>
         </div>
@@ -573,34 +573,34 @@
       <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
         <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/23.jpg" alt="">
           <div class="portfolio-info"> <a class="preview" href="images/Portfolio/23.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
-            <h6>ITEM-20</h6>
+            <h6>ITEM-23</h6>
             <p>08/01/2022</p>
           </div>
         </div>
         </div>
         <!--/.portfolio-item-->
       <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
-        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/24.jpg" alt="">
-          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/24.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
-            <h6>ITEM-20</h6>
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/24.jpeg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/24.jpeg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-24</h6>
             <p>09/01/2022</p>
           </div>
         </div>
         </div>
         <!--/.portfolio-item-->
       <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
-        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/25.jpg" alt="">
-          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/25.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
-            <h6>ITEM-20</h6>
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/25.jpeg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/25.jpeg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-25</h6>
             <p>09/01/2022</p>
           </div>
         </div>
         </div>
         <!--/.portfolio-item-->
       <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
-        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/26.jpg" alt="">
-          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/26.jpg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
-            <h6>ITEM-20</h6>
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/26.jpeg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/26.jpeg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-26</h6>
             <p>09/01/2022</p>
           </div>
         </div>
