--- a/index.html
+++ b/index.html
@@ -606,6 +606,76 @@
         </div>
         </div>
       <!--/.portfolio-item-->
+        <!--/.portfolio-item-->
+      <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/27.jpeg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/27.jpeg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-27</h6>
+            <p>11/01/2022</p>
+          </div>
+        </div>
+        </div>
+      <!--/.portfolio-item-->
+        <!--/.portfolio-item-->
+      <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/28.jpeg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/28.jpeg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-28</h6>
+            <p>12/01/2022</p>
+          </div>
+        </div>
+        </div>
+      <!--/.portfolio-item-->
+        <!--/.portfolio-item-->
+      <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/29.jpeg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/29.jpeg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-29</h6>
+            <p>12/01/2022</p>
+          </div>
+        </div>
+        </div>
+      <!--/.portfolio-item-->
+        <!--/.portfolio-item-->
+      <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/30.jpeg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/30.jpeg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-30</h6>
+            <p>12/01/2022</p>
+          </div>
+        </div>
+        </div>
+      <!--/.portfolio-item-->
+        <!--/.portfolio-item-->
+      <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/31.jpeg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/31.jpeg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-31</h6>
+            <p>12/01/2022</p>
+          </div>
+        </div>
+        </div>
+      <!--/.portfolio-item-->
+        <!--/.portfolio-item-->
+      <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/32.jpeg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/32.jpeg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-32</h6>
+            <p>12/01/2022</p>
+          </div>
+        </div>
+        </div>
+      <!--/.portfolio-item-->
+        <!--/.portfolio-item-->
+      <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item corporate">
+        <div class="portfolio-item-inner"> <img class="img-responsive" src="images/Portfolio/33.jpeg" alt="">
+          <div class="portfolio-info"> <a class="preview" href="images/Portfolio/33.jpeg" data-rel="prettyPhoto"><i class="fa fa-plus-circle"></i></a>
+            <h6>ITEM-33</h6>
+            <p>12/01/2022</p>
+          </div>
+        </div>
+        </div>
+      <!--/.portfolio-item-->
     </div>
   </div>
 </section>
