--- a/index.html
+++ b/index.html
@@ -1048,6 +1048,24 @@
         </div>
       </div>
     </div>
+      <div class="col-md-3 col-sm-6 col-xs-12 team-main-sec wow slideInUp" data-wow-duration="1s" data-wow-delay=".3s">
+      <div class="team-sec">
+        <div class="team-img"> <img src="images/Team/16.jpg" class="img-responsive" alt="">
+          <div class="team-desc">
+            <h5>Shahadat Yeasin</h5>
+            <p>Roll 048
+            </p>
+            <ul class="team-social-icon">
+              <li><a href="https://www.facebook.com/profile.php?id=100035749260873" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
+              <li><a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fab fa-twitter"></i></a></li>
+              <li><a href="#" data-toggle="tooltip" data-placement="top" title="Pinterest"><i class="fab fa-pinterest-p"></i></a></li>
+              <li><a href="#" data-toggle="tooltip" data-placement="top" title="Instagram"><i class="fab fa-instagram"></i></a></li>
+              <li><a href="#" data-toggle="tooltip" data-placement="top" title="Google-plus"><i class="fab fa-google-plus"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="col-md-3 col-sm-6 col-xs-12 team-main-sec wow slideInUp" data-wow-duration="1s" data-wow-delay=".4s">
       <div class="team-sec">
         <div class="team-img"> <img src="images/Team/00.png" class="img-responsive" alt="">
